--- a/GrandaPruebaPaises/GrandaPruebaPaises.csproj
+++ b/GrandaPruebaPaises/GrandaPruebaPaises.csproj
@@ -65,9 +65,12 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="Models\" />
-	  <Folder Include="ViewModel\" />
-	  <Folder Include="Views\" />
+	  <MauiXaml Update="Views\VistaConsultado.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\VistaPrincipal.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
